# kenken-sat

./: CMakeLists.txt  README.md  cage.cpp  cage.hpp  main.cpp  solver.cpp  solver.hpp
inputs/: input-3.txt  input-7.txt
